# hubspot-aws-pipeline-sync

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync.yml
AWS Hubspot Sync/: CLAUDE.md  README.md  pyproject.toml
AWS Hubspot Sync/src/: __init__.py  hubspot_client.py
AWS Hubspot Sync/tests/: test_ace_client.py  test_mapping.py  test_sync.py
src/: ace_client.py  config.py  hubspot_client.py  logger.py  main.py  mapping.py  slack_client.py  sync.py
tests/: conftest.py  test_ace_client.py  test_mapping.py  test_sync.py
